test/libyul/yulSyntaxTests/dot_consecutive_function_ret.yul
{
    function x() -> a..b {}
}
// ----
// TypeError 7771: (22-26): "a..b" is not a valid identifier (contains consecutive dots).
